--- a/src/components/weStory/weStory.module.css
+++ b/src/components/weStory/weStory.module.css
@@ -13,6 +13,8 @@
     justify-content: center;
 }
 .title {
+    display: flex;
+    justify-content: center;
     font-size: 48px;
     font-weight: bold;
     color: #587C70;
@@ -29,7 +31,7 @@
     background-color: #587C70;
     color: white;
     border: none;
-    border-radius: 4px;
+    border-radius: 20px;
     font-size: 16px;
     cursor: pointer;
     transition: background-color 0.3s ease;
