--- a/src/components/categories/categories.module.css
+++ b/src/components/categories/categories.module.css
@@ -1,16 +1,33 @@
 .categories {
-  padding: 2rem;
+  padding: 1rem;
   display: flex;
-  flex-wrap: wrap;
-  gap: 2rem;
-  justify-content: center;
+  flex-direction: column;
+  gap: 1rem;
+  align-items: center;
   border-bottom: 2px solid #587C70;
 }
+
 .title {
-  font-size: 48px;
+  font-size: 32px;
   font-weight: 700;
   color: #847b77;
   text-align: center;
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
   font-family: "Playfair", serif;
+}
+
+@media (min-width: 768px) {
+  .categories {
+    padding: 2rem;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 2rem;
+  }
+
+  .title {
+    font-size: 48px;
+    width: 100%;
+    margin-bottom: 2rem;
+  }
 }
